--- a/src/java/resources/templates/songs.html
+++ b/src/java/resources/templates/songs.html
@@ -21,7 +21,7 @@
       <div class="blog-post">
         <span class="col-sm-8"></span>
       </div>
-      <h3><a href="https://www.tianmaying.com/tutorial/music-163-crawler">网易云音乐爬虫（By 天码营）</a></h3>
+      <h3><a href="https://www.tianmaying.com/tutorial/music-163-crawler">网易云音乐爬虫</a></h3>
         
       
       <table class="table"> 
@@ -50,7 +50,7 @@
     </div>
    </div>
    <footer>
-    &copy; 2016 天码营, Inc. &middot; <a href="#">隐私</a> &middot; <a href="#">条款</a>
+    &copy; 2017 Xison, Inc. &middot; <a href="#">隐私</a> &middot; <a href="#">条款</a>
   </footer>
  </body>
 </html>
